# ChangeLog for dev-java/cglib
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.34 2007/10/24 23:26:11 betelgeuse Exp $

  24 Oct 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
  Fix source use flag. Reported in bug #192793.

  16 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> cglib-2.1.3.ebuild:
  ppc stable, bug #186199

  24 Jul 2007; Christian Faulhammer <opfer@gentoo.org> cglib-2.1.3.ebuild:
  stable x86, bug 186199

  22 Jul 2007; Wulf C. Krueger <philantrop@gentoo.org> cglib-2.1.3.ebuild:
  Marked stable on amd64 as per bug 186199.

  02 Jul 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
  Fix LICENSE to Apache-2.0 from Apache-1.1 and use java-pkg_dojavadoc.

  26 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> cglib-2.1.3.ebuild,
  cglib-2.2_beta1.ebuild:
  Add ~ppc.

  18 May 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.2_beta1.ebuild:
  Use ANT_TASKS for jarjar.

  26 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  cglib-2.0.2-r2.ebuild, cglib-2.1.3.ebuild, cglib-2.2_beta1.ebuild:
  Shorten the overly long DESCRIPTION by moving it to metadata.xml as
  longdescription.

  26 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.0.2-r2.ebuild:
  Stylistic cleanup.

  25 Apr 2007; Vlastimil Babka <caster@gentoo.org> cglib-2.0.2-r2.ebuild:
  Fix dependencies, tweak style.

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.1.3.ebuild:
  Fix errors reported by java-pkg_ensure-dep.

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> cglib-2.2_beta1.ebuild:
  Add dev-java/ant-core to RDEPEND.

  18 Feb 2007; nixnut <nixnut@gentoo.org> cglib-2.0.2-r2.ebuild:
  Stable on ppc wrt bug 163646

  04 Feb 2007; Vlastimil Babka <caster@gentoo.org> -cglib-2.0.2-r1.ebuild,
  -cglib-2.1.2.ebuild:
  Cleanup.

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> cglib-2.0.2-r2.ebuild:
  amd64 stable, bug 163646
